tests/ui/closure_missing_arg_type.stderr
error[E0282]: type annotations needed
 --> tests/ui/closure_missing_arg_type.rs:4:43
  |
4 |     assert_ir!(basic_blocks.len().ge(1), |x| x);
  |                                           ^
  |
help: consider giving this closure parameter an explicit type
  |
4 |     assert_ir!(basic_blocks.len().ge(1), |x: /* Type */| x);
  |                                            ++++++++++++
